// Crypto Portfolio Management System - ERD
// Run this at: https://dbdiagram.io/

Table users {
  id bigint [pk, increment]
  national_id varchar(16) [unique, not null]
  first_name varchar(100) [not null]
  last_name varchar(100) [not null]
  email varchar(255) [unique, not null]
  phone_number varchar(20)
  date_of_birth date
  location_id uuid [ref: > locations.id]
  created_at timestamp [default: `now()`]
}

Table locations {
  id uuid [pk]
  name varchar(100) [not null]
  code varchar(50) [unique, not null]
  type varchar(20) [not null, note: 'PROVINCE, DISTRICT, SECTOR, CELL, VILLAGE']
  parent_id uuid [ref: > locations.id]
  created_at timestamp [default: `now()`]
}

Table portfolios {
  id bigint [pk, increment]
  user_id bigint [unique, ref: - users.id, not null]
  name varchar(255) [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table assets {
  id bigint [pk, increment]
  name varchar(100) [not null]
  symbol varchar(10) [unique, not null]
  current_price decimal(18,2) [not null]
  market_cap decimal(20,2)
  risk_percentage decimal(5,2) [note: '0-100 scale']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table tags {
  id bigint [pk, increment]
  name varchar(50) [unique, not null]
  description varchar(255)
}

Table asset_tags {
  asset_id bigint [ref: > assets.id]
  tag_id bigint [ref: > tags.id]
  
  indexes {
    (asset_id, tag_id) [pk]
  }
}

Table transactions {
  id bigint [pk, increment]
  portfolio_id bigint [ref: > portfolios.id, not null]
  asset_id bigint [ref: > assets.id, not null]
  type varchar(10) [not null, note: 'BUY or SELL']
  quantity decimal(18,8) [not null]
  price_at_transaction decimal(18,2) [not null]
  transaction_date timestamp [default: `now()`]
  notes text
}

Table portfolio_holdings {
  id bigint [pk, increment]
  portfolio_id bigint [ref: > portfolios.id, not null]
  asset_id bigint [ref: > assets.id, not null]
  quantity decimal(18,8) [not null]
  average_buy_price decimal(18,2) [not null]
  last_updated timestamp [default: `now()`]
  
  indexes {
    (portfolio_id, asset_id) [unique]
  }
}

// Relationships Summary:
// - User has ONE Portfolio (1:1)
// - User belongs to ONE Location (M:1)
// - Location has MANY children Locations (1:M self-referencing)
// - Portfolio has MANY Transactions (1:M)
// - Portfolio has MANY Holdings (1:M)
// - Asset has MANY Transactions (1:M)
// - Asset has MANY Holdings (1:M)
// - Asset has MANY Tags (M:M through asset_tags)
